--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ignite-ui/tokens",
-  "version": "1.0.0",
+  "name": "@luan-ignite-ui-ds/tokens",
+  "version": "3.0.0",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -14,8 +14,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/ts-config": "*",
+    "@luan-ignite-ui-ds/eslint-config": "*",
+    "@luan-ignite-ui-ds/ts-config": "*",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
