--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,8 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env:
+          TURBO_TOKEN: poAnVww8B5czFl7AFpMElSBX
 
       - name: Deploy storybook
         working-directory: ./packages/docs
