--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -23,7 +23,7 @@ jobs:
 
       - run: npm run build
         env:
-          TURBO_TOKEN: poAnVww8B5czFl7AFpMElSBX
+          TURBO_TOKEN: ${{ secrets.TURBO_TOKEN_VERCEL }}
           TURBO_TEAM: luanpiresbresolla
 
       - name: Deploy storybook
