--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -34,5 +34,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          TURBO_TOKEN: poAnVww8B5czFl7AFpMElSBX
+          TURBO_TOKEN: ${{ secrets.TURBO_TOKEN_VERCEL }}
           TURBO_TEAM: luanpiresbresolla
