--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "turbo run dev --parallel",
     "build": "turbo run build",
     "changeset": "changeset",
-    "version-packages": "changeset version",
+    "version": "changeset version",
     "release": "turbo run build --filter=!docs && changeset publish"
   },
   "workspaces": [
